# Furu

./: .gitignore  AGENTS.md  LICENSE  README.md  devenv.nix  package.json  pnpm-lock.yaml  vite.config.js
src/: app.css  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.local.conf.example.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-ble-keepalive/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-ble-keepalive/android/: build.gradle.kts
src-tauri/plugins/tauri-plugin-ble-keepalive/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-ble-keepalive/android/src/main/res/drawable/: ic_furu_ble_notification.xml
src-tauri/plugins/tauri-plugin-ble-keepalive/android/src/main/res/values/: strings.xml
src-tauri/plugins/tauri-plugin-ble-keepalive/permissions/: default.toml
src-tauri/plugins/tauri-plugin-ble-keepalive/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-ble-keepalive/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-ble-keepalive/src/: commands.rs  lib.rs
src-tauri/plugins/tauri-plugin-notification-forwarder/: .gitignore  Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-notification-forwarder/android/: build.gradle.kts  consumer-rules.pro
src-tauri/plugins/tauri-plugin-notification-forwarder/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-notification-forwarder/permissions/: default.toml
src-tauri/plugins/tauri-plugin-notification-forwarder/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-notification-forwarder/permissions/autogenerated/commands/: drain_notifications.toml  get_permission_status.toml  list_recent_notifications.toml  open_notification_listener_settings.toml  post_test_notification.toml  wait_for_notifications.toml
src-tauri/plugins/tauri-plugin-notification-forwarder/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-notification-forwarder/src/: commands.rs  lib.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ble/: ans.rs  commands.rs  cts.rs  dis.rs  feature_id.rs  mod.rs  notification_forwarding.rs  profiles.rs  registry.rs  session.rs
(+54 files in other folders)
