[package]
name = "furu"
version = "0.1.0"
description = "A Tauri App"
authors = ["Petter Hoem Sletsjøe"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "furu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-blec = "0.8.1"
tauri-plugin-ble-keepalive = { path = "plugins/tauri-plugin-ble-keepalive" }
tauri-plugin-notification-forwarder = { path = "plugins/tauri-plugin-notification-forwarder" }
tauri-plugin-store = "2"
uuid = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tokio = { version = "1", features = ["time"] }

