[package]
name = "tauri-plugin-ble-keepalive"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"
links = "tauri-plugin-ble-keepalive"

[lib]
name = "tauri_plugin_ble_keepalive"
crate-type = ["lib"]

[dependencies]
serde_json = "1"
tauri = { version = "2", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
