[package]
name = "tauri-plugin-notification-forwarder"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"
links = "tauri-plugin-notification-forwarder"

[lib]
name = "tauri_plugin_notification_forwarder"
crate-type = ["lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
